--- a/css/style.css
+++ b/css/style.css
@@ -601,6 +601,133 @@ header .right-side a {
 	top: -1px;
 }
 
+#akcii {
+	padding: 70px 15px;
+}
+#akcii h2 {
+	font-size: 48px;
+}
+#akcii h3 {
+	font-size: 36px;
+	color: #828282;
+}
+#akcii h3 span:before {
+	content: '';
+	display: block;
+	width: 100%;
+	height: 6px;
+	background-color: #FFF66B;
+	position: absolute;
+	bottom: -10px;
+	left: 0;
+}
+.akc-slider {
+	max-width: 1250px;
+}
+.akc-wrap {
+	padding: 100px 0;
+}
+.akc-item {
+	max-width: 380px;
+	background-color: #F2F2F2;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+	padding: 90px 10px 50px;
+	height: 550px;
+}
+.akc-icon {
+	width: 150px;
+	height: 150px;
+	border-radius: 50%;
+	border: 5px solid #f2f2f2;
+	left: 0;
+	right: 0;
+	margin: auto;
+	top: -75px;
+	background-color: #fff;
+	overflow: hidden;
+}
+.akc-icon img {
+	max-width: 70%;
+}
+.akc-name {
+	font-size: 24px;
+}
+.akc-price {
+	font-size: 64px;
+}
+.akc-slider-detail {
+	width: 100%;
+	max-width: 290px;
+	text-decoration: none !important;
+	background-color: #000;
+	bottom: -45px;
+	left: 0;
+	right: 0;
+	margin: auto;
+}
+.akc-slider-detail span {
+	position: absolute;
+	display: block;
+	width: 25px;
+	height: 3px;
+	background-color: #FFF66B;
+	top: 0;
+	bottom: 0;
+	margin: auto;
+	right: 70px;
+}
+.akc-slider-detail span:before,
+.akc-slider-detail span:after {
+	content: '';
+	position: absolute;
+	display: block;
+	width: 15px;
+	height: 3px;
+	background-color: #FFF66B;
+	transform-origin: 100% 100%;
+}
+.akc-slider-detail span:before {
+	transform: rotate(45deg);
+	right: 0px;
+}
+.akc-slider-detail span:after {
+	transform: rotate(-45deg);
+	right: -2px;
+	top: -1px;
+}
+.akc-slider .slick-dots {
+	bottom: -20px;
+}
+.akc-slider .slick-dots li {
+	height: 15px;
+	width: 15px;
+}
+.akc-slider .slick-dots li button {
+	border-radius: 50%;
+	background-color: #4F4F4F;
+	height: 15px;
+	width: 15px;
+}
+.akc-slider .slick-dots li button:before {
+    content: '';
+    background-color: transparent;
+	display: block;
+	border-radius: 50%;
+	width: 15px;
+	height: 15px;
+	top: 0;
+	left: 0;
+}
+.akc-slider li.slick-active button:before {
+    opacity: 1;
+    background-color: #FFF66B;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+	width: 19px;
+	height: 19px;
+	top: -2px;
+	left: -2px;
+}
+
 #news {
 	background-color: #212121;
 }
@@ -698,4 +825,29 @@ header .right-side a {
 }
 .part-wrap:first-of-type {
 	border-bottom: 1px solid #C4C4C4;
+}
+
+footer {
+	background-color: #212121;
+}
+footer:before {
+	content: '';
+	position: absolute;
+	display: block;
+	height: 5px;
+	background-color: #FFF66B;
+	left: 0;
+	right: 0;
+	top: 100px;
+}
+.foot-content {
+	max-width: 550px;
+	background-color: #212121;
+}
+.foot-copy {
+	border-top: 1px solid #FFFFFF;
+	font-size: 14px;
+}
+.foot-contacts a {
+	text-decoration: none !important;
 }
