--- a/css/style.css
+++ b/css/style.css
@@ -1356,8 +1356,33 @@ footer:before {
 	border-radius: 50%;
 	background-color: #000;
 }
+@media (max-width: 1600px) {
+	.cont-text {
+		padding-top: 50px;
+	}
+}
 @media (max-width: 1199px) {
 	.cont-item {
 		padding-left: 0;
+	}
+}
+@media (max-width: 575px) {
+	.cont-text {
+		height: auto;
+		padding-top: 30px;
+	}
+	.cont-item a {
+		font-size: 16px;
+	}
+	.cont-icon {
+		width: 50px;
+		height: 50px;
+	}
+	.messenger {
+		width: 25px;
+		height: 25px;
+	}
+	.messenger img {
+		width: 15px;
 	}
 }
